<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="69dp"
        android:layout_marginTop="75dp"
        android:layout_marginBottom="47dp"
        android:ems="10"
        android:hint="@string/hint_money"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/bankCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="69dp"
        android:layout_marginBottom="44dp"
        android:text="@string/bank_payment"
        app:layout_constraintBottom_toTopOf="@+id/mobileCheck"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <CheckBox
        android:id="@+id/mobileCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="44dp"
        android:text="@string/mobile_payment"
        app:layout_constraintBottom_toTopOf="@+id/cashCheck"
        app:layout_constraintStart_toStartOf="@+id/bankCheck"
        app:layout_constraintTop_toBottomOf="@+id/bankCheck" />

    <CheckBox
        android:id="@+id/cashCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="73dp"
        android:text="@string/cash_payment"
        app:layout_constraintBottom_toTopOf="@+id/information"
        app:layout_constraintStart_toStartOf="@+id/mobileCheck"
        app:layout_constraintTop_toBottomOf="@+id/mobileCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:text="@string/choose_payment"
        android:textColor="#191717"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/bankCheck"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/money" />

    <EditText
        android:id="@+id/information"
        android:layout_width="274dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="69dp"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="172dp"
        android:ems="10"
        android:hint="@string/information"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/okBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="43dp"
        android:text="@string/ok_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/information" />
</androidx.constraintlayout.widget.ConstraintLayout>